current:
	NOTE: multiple source files were removed and had to be recreated so previous changelogs may be inaccurate (oopsie :3)
	changed project layout
	added liballoc
	parsed efi memory descriptors into a format easily usable by liballoc
	removed crti,crtn from kernel (will probably add back later but it does not have any real use right now)
	updated tty to clear screen after 25 lines
	recreated loader in posix-uefi (it was easier than modifying an existing loader to pass the information for the kernel)
	rewrote gdt and idt
	remapped kernel to use the same address space as the linux kernel
	paging now works correctly (deferencing virtual addresses now actually returns correct information instead of page faulting)
7413cd4:
	even more refactoring
	moved cpio parsing to separate file
	added strncmp
	increased memory allocated to initfs for future use (8KB to 1MB)
	added separate archive list for cpio (easier to add new files)
	updated makefile to not clean initfs and added it to .PHONY to force it to get rebuilt each time (easier for git)
c3176f9:
	changed clang format
	made clang format ignore posix-uefi
	created basic libc + printf
	passed uefi memory map to kernel
	refactored code
	added crt{i,n}.s
	removed posix-uefi from repository

993ffe8:
	added compile_commands and .clang-format
	Fixed apply.sh to correctly use QEMU_DEBUG flag ONLY when running on qemu (wildly sending bytes to a theoretical serial port is NOT a good idea)
	Manually specified qemu ram size (it was causing a weird issue with allocations)
		trying to store a large array on the stack causes the entire emulator to crash regardless of ram size
		malloc calls also crashed with anything less than 2G ram
	Switched back to custom elf loader using posix uefi
		Previous issues with kernel not loading were due to not specifying SYSV_ABI for the entry point