@@ -4,7 +4,7 @@ EXEC=bootx64.efi
 CFLAGS=-ffreestanding -fshort-wchar -mno-red-zone
 LDFLAGS=-ffreestanding -nostdlib
 all: $(EXEC) test
-
+	clang -g scratch.c
 .PHONY: kernel test libc initfs
 
 $(EXEC): kernel initfs
