@@ -3,3 +3,5 @@ apply.sh assumes that a flash drive is mounted on /dev/sda1, if you have a hard 
 
 # liballoc.c is from the [liballoc repository](https://github.com/blanham/liballoc/tree/master)
 ## while the implementation allows for thread safety, I have not implemented that and instead set the lock and unlock function to do nothing
+
+# You will have to download posix-uefi and put the uefi folder in the loader folder for it to work
