@@ -72,6 +72,29 @@
       "-mno-sse2",
       "-fPIC",
       "-o",
+      "objs/acpi.o",
+      "acpi.c"
+    ],
+    "directory": "/home/lust/projects/state-mandated-os-attempt/kernel",
+    "file": "/home/lust/projects/state-mandated-os-attempt/kernel/acpi.c",
+    "output": "/home/lust/projects/state-mandated-os-attempt/kernel/objs/acpi.o"
+  },
+  {
+    "arguments": [
+      "/usr/bin/clang",
+      "-c",
+      "-Iinclude",
+      "-I../libc/include",
+      "-ffreestanding",
+      "-fshort-wchar",
+      "-mno-red-zone",
+      "-mcmodel=kernel",
+      "-fno-stack-protector",
+      "-mno-mmx",
+      "-mno-sse",
+      "-mno-sse2",
+      "-fPIC",
+      "-o",
       "objs/alloc.o",
       "alloc.c"
     ],
@@ -796,11 +819,86 @@
       "-x",
       "c",
       "-o",
-      "/tmp/loader-5269d3.o",
+      "/tmp/loader-808b43.o",
       "loader.c"
     ],
     "directory": "/home/lust/projects/state-mandated-os-attempt/test",
     "file": "/home/lust/projects/state-mandated-os-attempt/test/loader.c",
-    "output": "/tmp/loader-5269d3.o"
+    "output": "/tmp/loader-808b43.o"
+  },
+  {
+    "arguments": [
+      "/usr/bin/clang",
+      "-c",
+      "-g",
+      "scratch.c"
+    ],
+    "directory": "/home/lust/projects/state-mandated-os-attempt",
+    "file": "/home/lust/projects/state-mandated-os-attempt/scratch.c"
+  },
+  {
+    "arguments": [
+      "/usr/bin/clang-20",
+      "-cc1",
+      "-triple",
+      "x86_64-pc-linux-gnu",
+      "-emit-obj",
+      "-dumpdir",
+      "a-",
+      "-disable-free",
+      "-clear-ast-before-backend",
+      "-disable-llvm-verifier",
+      "-discard-value-names",
+      "-main-file-name",
+      "-mrelocation-model",
+      "pic",
+      "-pic-level",
+      "2",
+      "-pic-is-pie",
+      "-mframe-pointer=all",
+      "-fmath-errno",
+      "-ffp-contract=on",
+      "-fno-rounding-math",
+      "-mconstructor-aliases",
+      "-funwind-tables=2",
+      "-target-cpu",
+      "x86-64",
+      "-tune-cpu",
+      "generic",
+      "-debug-info-kind=constructor",
+      "-dwarf-version=5",
+      "-debugger-tuning=gdb",
+      "-fdebug-compilation-dir=/home/lust/projects/state-mandated-os-attempt",
+      "-fcoverage-compilation-dir=/home/lust/projects/state-mandated-os-attempt",
+      "-resource-dir",
+      "/usr/lib/clang/20",
+      "-internal-isystem",
+      "/usr/lib/clang/20/include",
+      "-internal-isystem",
+      "/usr/local/include",
+      "-internal-isystem",
+      "/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/15.1.1/../../../../x86_64-pc-linux-gnu/include",
+      "-internal-externc-isystem",
+      "/include",
+      "-internal-externc-isystem",
+      "/usr/include",
+      "-ferror-limit",
+      "19",
+      "-stack-protector",
+      "2",
+      "-fgnuc-version=4.2.1",
+      "-fskip-odr-check-in-gmf",
+      "-fcolor-diagnostics",
+      "-faddrsig",
+      "-D__GCC_HAVE_DWARF2_CFI_ASM=1",
+      "-x",
+      "c",
+      "-o",
+      "/tmp/scratch-46e54b.o",
+      "scratch.c"
+    ],
+    "directory": "/home/lust/projects/state-mandated-os-attempt",
+    "file": "/home/lust/projects/state-mandated-os-attempt/scratch.c",
+    "output": "/tmp/scratch-46e54b.o"
   }
 ]
