@@ -1,0 +1,7 @@
+#ifndef __KERNEL_ACPI_H__
+#define __KERNEL_ACPI_H__
+
+#include <stdint.h>
+void xsdt(uint64_t addr);
+
+#endif
